feat: add team administrator management
